# UR10_FK_IK

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
src/manipulator_task/: package.xml  setup.cfg  setup.py
src/manipulator_task/manipulator_task/: ur10_kinematics_node.py
